2015-01-11  Janus Weil  <janus@gcc.gnu.org>

PR fortran/58023
	* resolve.c (resolve_fl_derived0): Set error flag if problems with the
	interface of a procedure-pointer component were detected.

2015-01-11  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/58023
	* gfortran.dg/proc_ptr_comp_42.f90: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@219439 138bc75d-0d04-0410-961f-82ee72b054a4